--- a/CnyThbConverter.csproj
+++ b/CnyThbConverter.csproj
@@ -1,11 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <!-- Choose net9.0-windows or net8.0-windows; keep the -windows suffix -->
-    <TargetFramework>net9.0-windows</TargetFramework>
+    <TargetFramework>net9.0-windows</TargetFramework> <!-- or net8.0-windows -->
     <UseWPF>true</UseWPF>
 
-    <!-- Publishing settings that keep WPF happy -->
     <PublishSingleFile>true</PublishSingleFile>
     <PublishTrimmed>false</PublishTrimmed>
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
@@ -13,5 +10,4 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
 </Project>
