--- a/release.yml
+++ b/release.yml
@@ -1,48 +1,48 @@
-name: Build and Release WPF App
+name: Build and Release
 
 on:
   push:
     tags:
-      - 'v*'           # build whenever you push a tag like v1.0.9
-  workflow_dispatch:
+      - 'v*'   # Trigger on tags like v1.0.9, v2.0.0 etc.
 
 jobs:
   build:
     runs-on: windows-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.0.x'
+          dotnet-version: '9.0.x'   # adjust to your target .NET version
 
-      - name: Restore
+      - name: Restore dependencies
         run: dotnet restore
 
-      - name: Publish (self-contained EXE)
-        run: >
-          dotnet publish CnyThbConverter.csproj -c Release -r win-x64
-          --self-contained true
-          -p:PublishSingleFile=true
-          -p:PublishTrimmed=false
+      - name: Build
+        run: dotnet publish -c Release -r win-x64 --self-contained true -p:PublishSingleFile=true -o out
 
-      - name: Archive build output
+      - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: CnyThbConverter-win-x64
-          path: bin/Release/net9.0-windows/win-x64/publish/
+          name: CnyThbConverter
+          path: out/*
 
   release:
-    needs: build
     runs-on: ubuntu-latest
+    needs: build
     steps:
-      - uses: actions/download-artifact@v4
+      - name: Download Artifact
+        uses: actions/download-artifact@v4
         with:
-          name: CnyThbConverter-win-x64
-          path: dist
+          name: CnyThbConverter
+          path: out
 
-      - name: Create GitHub Release
+      - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
-          files: dist/**
+          files: out/*
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
