--- a/release.yml
+++ b/release.yml
@@ -1,9 +1,12 @@
-name: Build and Release
+name: Build and Release WPF App
 
 on:
   push:
     tags:
-      - 'v*'   # Trigger on tags like v1.0.9, v2.0.0 etc.
+      - "v*"
+
+permissions:
+  contents: write  # required for creating releases
 
 jobs:
   build:
@@ -13,36 +16,68 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup .NET
+      - name: Setup .NET SDK
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.0.x'   # adjust to your target .NET version
+          # Match your project TF. If your .csproj uses net8.0-windows, set 9.0.x
+          dotnet-version: "9.0.x"
 
-      - name: Restore dependencies
+      - name: Restore
         run: dotnet restore
 
-      - name: Build
-        run: dotnet publish -c Release -r win-x64 --self-contained true -p:PublishSingleFile=true -o out
+      - name: Publish (self-contained, single-file)
+        run: >
+          dotnet publish CnyThbConverter.csproj
+          -c Release -r win-x64 --self-contained true
+          -p:PublishSingleFile=true
+          -p:IncludeAllContentForSelfExtract=true
+          -p:DebugType=None -p:DebugSymbols=false
+          -o out
 
-      - name: Upload Artifact
+      - name: Verify exe exists
+        shell: pwsh
+        run: |
+          $exe = Get-ChildItem out -Filter *.exe -Recurse | Select-Object -First 1
+          if (-not $exe) { Write-Error "No .exe found in 'out' after publish."; exit 1 }
+          Write-Host "Found EXE:" $exe.FullName
+
+      - name: Rename exe with tag version
+        shell: pwsh
+        run: |
+          $tag = "${{ github.ref_name }}"
+          $exe = Get-ChildItem out -Filter *.exe -Recurse | Select-Object -First 1
+          $new = Join-Path $exe.DirectoryName ("CnyThbConverter-" + $tag + ".exe")
+          Move-Item $exe.FullName $new
+          Write-Host "Renamed to:" $new
+
+      - name: Zip all published files
+        shell: pwsh
+        run: |
+          Compress-Archive -Path out\* -DestinationPath CnyThbConverter-${{ github.ref_name }}.zip
+
+      - name: Upload artifact (for debugging)
         uses: actions/upload-artifact@v4
         with:
-          name: CnyThbConverter
-          path: out/*
+          name: build-out
+          path: |
+            out/**
+            CnyThbConverter-${{ github.ref_name }}.zip
 
   release:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Download Artifact
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: CnyThbConverter
-          path: out
+          name: build-out
+          path: dist
 
-      - name: Create Release
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          files: out/*
+          files: |
+            dist/CnyThbConverter-*.exe
+            dist/CnyThbConverter-*.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
