--- a/release.yml
+++ b/release.yml
@@ -3,81 +3,39 @@ name: Build and Release WPF App
 on:
   push:
     tags:
-      - "v*"
-
-permissions:
-  contents: write  # required for creating releases
+      - 'v*' # Only trigger when you push a tag like v1.0.0
 
 jobs:
   build:
     runs-on: windows-latest
-
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup .NET SDK
+      - name: Setup .NET 9
         uses: actions/setup-dotnet@v4
         with:
-          # Match your project TF. If your .csproj uses net8.0-windows, set 9.0.x
-          dotnet-version: "9.0.x"
+          dotnet-version: '9.0.x'
 
-      - name: Restore
+      - name: Restore dependencies
         run: dotnet restore
 
-      - name: Publish (self-contained, single-file)
-        run: >
-          dotnet publish CnyThbConverter.csproj
-          -c Release -r win-x64 --self-contained true
-          -p:PublishSingleFile=true
-          -p:IncludeAllContentForSelfExtract=true
-          -p:DebugType=None -p:DebugSymbols=false
-          -o out
+      - name: Build Release
+        run: dotnet publish -c Release -r win-x64 --self-contained true -p:PublishSingleFile=true -p:IncludeAllContentForSelfExtract=true
 
-      - name: Verify exe exists
-        shell: pwsh
-        run: |
-          $exe = Get-ChildItem out -Filter *.exe -Recurse | Select-Object -First 1
-          if (-not $exe) { Write-Error "No .exe found in 'out' after publish."; exit 1 }
-          Write-Host "Found EXE:" $exe.FullName
-
-      - name: Rename exe with tag version
-        shell: pwsh
-        run: |
-          $tag = "${{ github.ref_name }}"
-          $exe = Get-ChildItem out -Filter *.exe -Recurse | Select-Object -First 1
-          $new = Join-Path $exe.DirectoryName ("CnyThbConverter-" + $tag + ".exe")
-          Move-Item $exe.FullName $new
-          Write-Host "Renamed to:" $new
-
-      - name: Zip all published files
-        shell: pwsh
-        run: |
-          Compress-Archive -Path out\* -DestinationPath CnyThbConverter-${{ github.ref_name }}.zip
-
-      - name: Upload artifact (for debugging)
-        uses: actions/upload-artifact@v4
+      - name: Create Release
+        id: create_release
+        uses: softprops/action-gh-release@v2
         with:
-          name: build-out
-          path: |
-            out/**
-            CnyThbConverter-${{ github.ref_name }}.zip
+          name: Release ${{ github.ref_name }}
+          tag_name: ${{ github.ref_name }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  release:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: build-out
-          path: dist
-
-      - name: Create GitHub Release
+      - name: Upload Build Artifact
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            dist/CnyThbConverter-*.exe
-            dist/CnyThbConverter-*.zip
+            CnyThbConverter/bin/Release/net9.0-windows/win-x64/publish/*.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
